--- a/user.html
+++ b/user.html
@@ -2,97 +2,137 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Responsive Form</title>
+    <style>
+        body {
+            font-family: sans-serif;
+            background-color: #f4f4f9;
+            padding: 20px;
+        }
+
+        /* Unique prefix dtr- to prevent CSS conflicts */
+        .dtr-box {
+            max-width: 1000px;
+            margin: 0 auto;
+            background: #fff;
+            padding: 20px;
+            border-radius: 8px;
+            box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+        }
+
+        /* Layout Structures */
+        .dtr-row, .dtr-user-info-inputs, .dtr-group {
+            display: flex;
+            flex-wrap: wrap;
+            gap: 15px;
+            margin-bottom: 20px;
+        }
+
+        .dtr-row {
+            justify-content: space-between;
+            align-items: center;
+            border-bottom: 1px solid #eee;
+            padding-bottom: 15px;
+        }
+
+        /* Form Groups */
+        .dtr-form-group {
+            display: flex;
+            flex-direction: column;
+            flex: 1;
+            min-width: 150px;
+        }
+
+        .dtr-label {
+            font-size: 0.85rem;
+            font-weight: bold;
+            margin-bottom: 5px;
+            color: #555;
+        }
+
+        .dtr-input-text {
+            padding: 8px;
+            border: 1px solid #ccc;
+            border-radius: 4px;
+            font-size: 14px;
+        }
+
+        /* Buttons */
+        .dtr-btn {
+            padding: 10px 15px;
+            cursor: pointer;
+            border: none;
+            border-radius: 4px;
+            background-color: #007bff;
+            color: white;
+            font-weight: bold;
+        }
+
+        .dtr-btn-secondary { background-color: #6c757d; }
+        .dtr-btn-add { background-color: #28a745; margin-top: auto; }
+
+        /* --- RESPONSIVE MEDIA QUERY --- */
+        @media (max-width: 768px) {
+            .dtr-row, .dtr-user-info-inputs, .dtr-group {
+                flex-direction: column; 
+                align-items: stretch;
+            }
+
+            .dtr-form-group {
+                width: 100%;
+            }
+
+            .dtr-col-actions {
+                display: flex;
+                flex-direction: column;
+                gap: 10px;
+            }
+
+            #file-name {
+                margin-left: 0 !important;
+                margin-bottom: 10px;
+                text-align: center;
+            }
+        }
+    </style>
 </head>
-<style>
-    .row{
-        display: flex;
-        flex-direction: row;
-        width: 100%;
-        justify-content: space-between;
-    }
-    .user-info-inputs{
-        display: flex;
-        flex-direction: row;
-        width: 100%;
-    }
-
-</style>
 <body>
-    <div class="box">
-    <div class="row">
+
+<div class="dtr-box">
+    <div class="dtr-row">
         <span id="file-name" style="margin-left:10px;">No file selected</span>
-          <input id="file" type="file" accept=".csv" style="opacity:0; position:absolute; z-index:10; width:100px; height:40px;" />
-         <div class="col">
-            <button id="upload">UPLOAD</button>
-            <button id="process">GENERATE</button>
-            <button id="print">Print</button>
-            <button class="secondary" id="clear">Clear</button>
-         </div>
-    </div>
-    <div class="user-edit-inputs user-info-inputs">
-            <div class="form-group">
-                <label for="inputStaffID">ID Number</label>
-                <input type="text" id="inputStaffID" placeholder="Enter Staff ID">
-            </div>
-            <div class="form-group">
-                <label for="inputStaffName">Employee Name</label>
-                <input type="text" id="inputStaffName" placeholder="Enter Staff Name">
-            </div>
-            <div class="form-group">
-                <label for="inputHubAssignment">Hub Assignment</label>
-                <input type="text" id="inputHubAssignment" placeholder="Enter Hub Assignment">
-            </div>
-            <div class="form-group">
-                <label for="inputMobileNumber">Mobile Number</label>
-                <input type="text" id="inputMobileNumber" placeholder="Enter Mobile Number">
-            </div>
-            <div class="form-group">
-                <label for="inputPeriodCoverage">Period Coverage</label>
-                <input type="text" id="inputPeriodCoverage" placeholder="Enter Period Coverage">
-            </div>
+        <input id="file" type="file" accept=".csv" style="opacity:0; position:absolute; z-index:10; width:100px; height:40px;" />
+        <div class="dtr-col-actions">
+            <button class="dtr-btn" id="upload">UPLOAD</button>
+            <button class="dtr-btn" id="process">GENERATE</button>
+            <button class="dtr-btn" id="print">Print</button>
+            <button class="dtr-btn dtr-btn-secondary" id="clear">Clear</button>
+        </div>
     </div>
 
-    <div class="time-inputs">
-
-  <!-- Row container -->
-  <div class="time-row">
-
-    <!-- Date / Shift -->
-    <div class="group top-row">
-      <div class="form-group">
-        <label for="inputDate">Date</label>
-        <input type="text" id="inputDate" value="7" placeholder="e.g., 21/11/2025">
-      </div>
-      <div class="form-group">
-        <label for="inputShiftStart">Shift Start</label>
-        <input type="text" value="1AM" id="inputShiftStart">
-      </div>
-      <div class="form-group">
-        <label for="inputShiftEnd">Shift End</label>
-        <input type="text" value="10AM" id="inputShiftEnd">
-      </div>
+    <div class="dtr-user-info-inputs">
+        <div class="dtr-form-group">
+            <label class="dtr-label" for="inputStaffID">ID Number</label>
+            <input type="text" id="inputStaffID" class="dtr-input-text" placeholder="Enter Staff ID">
+        </div>
+        <div class="dtr-form-group">
+            <label class="dtr-label" for="inputStaffName">Employee Name</label>
+            <input type="text" id="inputStaffName" class="dtr-input-text" placeholder="Enter Staff Name">
+        </div>
+        <div class="dtr-form-group">
+            <label class="dtr-label" for="inputHubAssignment">Hub Assignment</label>
+            <input type="text" id="inputHubAssignment" class="dtr-input-text" placeholder="Enter Hub Assignment">
+        </div>
+        <div class="dtr-form-group">
+            <label class="dtr-label" for="inputMobileNumber">Mobile Number</label>
+            <input type="text" id="inputMobileNumber" class="dtr-input-text" placeholder="Enter Mobile Number">
+        </div>
+        <div class="dtr-form-group">
+            <label class="dtr-label" for="inputPeriodCoverage">Period Coverage</label>
+            <input type="text" id="inputPeriodCoverage" class="dtr-input-text" placeholder="Enter Period Coverage">
+        </div>
     </div>
-
-    <!-- Clock / Button -->
-    <div class="group bottom-row">
-      <div class="form-group">
-        <label for="inputClockIn">Clock In</label>
-        <input type="text" value="1:00" id="inputClockIn">
-      </div>
-      <div class="form-group">
-        <label for="inputClockOut">Clock Out</label>
-        <input type="text" value="10:01" id="inputClockOut">
-      </div>
-      <div class="form-group">
-        <button id="addRowBtn">Add Row</button>
-      </div>
-    </div>
-
-  </div>
 </div>
 
-
-</div>
 </body>
 </html>
